k8s/00_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cronicle
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
