k8s/09_deployment_client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cronicle-client
  name: cronicle-client
  namespace: cronicle
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cronicle-client
  template:
    metadata:
      labels:
        app: cronicle-client
      name: cronicle-client
    spec:
      containers:
      - name: cronicle-client
        image: intelliops/cronicle:0.8.28
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 3012
          - name: broadcast-tcp
            containerPort: 3014
          - name: broadcast-udp
            containerPort: 3014
            protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 64M
          limits: 
            cpu: 1000m
            memory: 512M
        volumeMounts:
        - name: data
          mountPath: /opt/cronicle/data
      restartPolicy: Always
      volumes:
      - name: data
        emptyDir: {}
