k8s/09_statefulset_server_secondary.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: cronicle-server
    server-role: secondary
  name: cronicle-server-secondary
  namespace: cronicle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cronicle-server
  serviceName: cronicle-server
  template:
    metadata:
      labels:
        app: cronicle-server
        server-role: secondary
      name: cronicle-server
    spec:
      containers:
      - name: cronicle-server
        image: intelliops/cronicle:0.8.28
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 3012
          - name: broadcast-tcp
            containerPort: 3014
          - name: broadcast-udp
            containerPort: 3014
            protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 64M
          limits: 
            cpu: 1000m
            memory: 512M
        volumeMounts:
        - name: data
          mountPath: /opt/cronicle/data
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: cronicle-server-data
  updateStrategy:
    type: RollingUpdate
