k8s/02_netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: cronicle
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - {}
  egress:
  - {}
